<resources>
    <string name="app_name">AI_Trader</string>
    <string name="login_xapi">10143372</string>
    <string name="load_historical_financial_data">Get Data from db</string>
    <string name="load_symbols_db">Get symbols from db</string>
    <string name="password_xapi">6dd8093f</string>
    <string name="login_hint">please enter login</string>
    <string name="password_hint">please enter password</string>
    <string name="data_symbol">symbol</string>
    <string name="hint_data_symbol">eg. EURUSD</string>
    <string name="button_get_data">Get Data</string>
    <string name="string_cplusplus">AI Trader World</string>
    <string name="start_date">0</string>
    <string name="end_date">0</string>
    <string name="button_setStartDate">Set Start Date</string>
    <string name="button_SetEndDate">Set End Date</string>
    <string name="button_loginToXApi">Login to xAPI</string>
    <string name="button_login">Login</string>
    <string name="title_activity_trading_symbol">tradingSymbol</string>
    <string name="textview_testtext">Welcome to AI Trader</string>
    <string name="button_historicalData">AI Tester</string>
    <string name="welcome_login">Welcome to xAPI</string>
    <string name="set_period">Set Period</string>
    <string name="get_symbols_from_api">Get Symbols from API</string>
    <string name="show_symbols">Set Symbol</string>
    <string name="live_view">Select period and get historical data</string>
    <string name="button_period_selector">Period selector</string>
    <string name="get_data_from_xAapi">Get Historical Data</string>
    <string name="live_functions">Other functions</string>
    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>

</resources>
