<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_x_api_logi"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="com.hortensie.ai_trader.xApiConnectionLogin">


    <TextView
        android:paddingBottom="30dp"
        android:gravity="center"
        android:text="@string/welcome_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_api" />

    <EditText
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_xapi"
        android:ems="10"
        android:id="@+id/editTextLogin"
        android:inputType="number"
        android:hint="@string/login_hint"
        />

    <EditText
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/password_xapi"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:hint="@string/password_hint"
         />

    <Button

        android:layout_margin="12dp"
        android:layout_gravity="center"
        android:text="@string/button_login"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonLogin"
        />
</LinearLayout>
