<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.vaadin.polymer.demo.client.sampler.ai_trader.MainActivity">

    <TextView
        android:id="@+id/sample_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_xapi"
        android:ems="10"
        android:id="@+id/editTextLogin"
        android:inputType="number"
        tools:text="10073026"
        android:hint="@string/login_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/password_xapi"
        android:ems="10"
        android:id="@+id/editTextPassword"
        tools:text="devil666"
        android:hint="@string/password_hint" />

    <Button
        android:text="@string/login_xapi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLogin"
        />

    <Button
        android:text="@string/load_historical_financial_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStream"
       />

</LinearLayout>
