<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_x_api_trading_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.vaadin.polymer.demo.client.sampler.ai_trader.xApiUiInput">

    <TextView
        android:text="@string/start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDataStartDate"
        android:textSize="18sp" />

    <TextView
        android:text="@string/end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDataEndDate"
        android:textSize="18sp" />

    <Button
        android:textSize="14dp"
        android:text="@string/button_setStartDate"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonPickStartDate"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"/>



    <Button
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textSize="14dp"
        android:text="@string/button_SetEndDate"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonPickEndDate" />

    <Button
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textSize="14dp"
        android:text="Set Period"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/select_period" />

    <Button
        android:layout_gravity="right"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textSize="14dp"
        android:text="@string/load_historical_financial_data"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonGetData" />

    <Button
        android:layout_gravity="right"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textSize="14dp"
        android:text="Get Symbols"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonGetSymbols" />

    <Button
        android:layout_gravity="left"
        android:textSize="14dp"
        android:text="Show Symbols"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonShowSymbols" />

</LinearLayout>
